@@ -7,12 +7,13 @@
 
 package org.elasticsearch.xpack.esql.optimizer.rules.logical.promql;
 
-import org.elasticsearch.xpack.esql.capabilities.ConfigurationAware;
+import org.elasticsearch.common.time.DateUtils;
+import org.elasticsearch.xpack.esql.analysis.AnalyzerContext;
+import org.elasticsearch.xpack.esql.analysis.AnalyzerRules;
 import org.elasticsearch.xpack.esql.core.QlIllegalArgumentException;
 import org.elasticsearch.xpack.esql.core.expression.Alias;
 import org.elasticsearch.xpack.esql.core.expression.Attribute;
 import org.elasticsearch.xpack.esql.core.expression.Expression;
-import org.elasticsearch.xpack.esql.core.expression.FieldAttribute;
 import org.elasticsearch.xpack.esql.core.expression.FoldContext;
 import org.elasticsearch.xpack.esql.core.expression.Literal;
 import org.elasticsearch.xpack.esql.core.expression.MetadataAttribute;
@@ -20,13 +21,18 @@ import org.elasticsearch.xpack.esql.core.expression.NamedExpression;
 import org.elasticsearch.xpack.esql.core.expression.function.Function;
 import org.elasticsearch.xpack.esql.core.expression.predicate.regex.RLikePattern;
 import org.elasticsearch.xpack.esql.core.tree.Source;
-import org.elasticsearch.xpack.esql.core.type.EsField;
+import org.elasticsearch.xpack.esql.core.type.DataType;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.AggregateFunction;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.LastOverTime;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.Scalar;
+import org.elasticsearch.xpack.esql.expression.function.aggregate.TimeSeriesAggregateFunction;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.Values;
-import org.elasticsearch.xpack.esql.expression.function.grouping.Bucket;
+import org.elasticsearch.xpack.esql.expression.function.grouping.TStep;
+import org.elasticsearch.xpack.esql.expression.function.grouping.TimeSeriesWithout;
 import org.elasticsearch.xpack.esql.expression.function.scalar.convert.ToDouble;
+import org.elasticsearch.xpack.esql.expression.function.scalar.convert.ToString;
+import org.elasticsearch.xpack.esql.expression.function.scalar.internal.PackDimension;
+import org.elasticsearch.xpack.esql.expression.function.scalar.internal.UnpackDimension;
 import org.elasticsearch.xpack.esql.expression.function.scalar.string.EndsWith;
 import org.elasticsearch.xpack.esql.expression.function.scalar.string.StartsWith;
 import org.elasticsearch.xpack.esql.expression.function.scalar.string.regex.RLike;
@@ -34,14 +40,14 @@ import org.elasticsearch.xpack.esql.expression.predicate.Predicates;
 import org.elasticsearch.xpack.esql.expression.predicate.logical.And;
 import org.elasticsearch.xpack.esql.expression.predicate.logical.Not;
 import org.elasticsearch.xpack.esql.expression.predicate.nulls.IsNotNull;
+import org.elasticsearch.xpack.esql.expression.predicate.nulls.IsNull;
+import org.elasticsearch.xpack.esql.expression.predicate.operator.arithmetic.Sub;
 import org.elasticsearch.xpack.esql.expression.predicate.operator.comparison.Equals;
 import org.elasticsearch.xpack.esql.expression.predicate.operator.comparison.GreaterThanOrEqual;
 import org.elasticsearch.xpack.esql.expression.predicate.operator.comparison.In;
 import org.elasticsearch.xpack.esql.expression.predicate.operator.comparison.LessThanOrEqual;
 import org.elasticsearch.xpack.esql.expression.predicate.operator.comparison.NotEquals;
 import org.elasticsearch.xpack.esql.expression.promql.function.PromqlFunctionRegistry;
-import org.elasticsearch.xpack.esql.optimizer.LogicalOptimizerContext;
-import org.elasticsearch.xpack.esql.optimizer.rules.logical.OptimizerRules;
 import org.elasticsearch.xpack.esql.optimizer.rules.logical.TemporaryNameGenerator;
 import org.elasticsearch.xpack.esql.optimizer.rules.logical.TranslateTimeSeriesAggregate;
 import org.elasticsearch.xpack.esql.parser.promql.PromqlLogicalPlanBuilder;
@@ -52,6 +58,7 @@ import org.elasticsearch.xpack.esql.plan.logical.Filter;
 import org.elasticsearch.xpack.esql.plan.logical.LogicalPlan;
 import org.elasticsearch.xpack.esql.plan.logical.Project;
 import org.elasticsearch.xpack.esql.plan.logical.TimeSeriesAggregate;
+import org.elasticsearch.xpack.esql.plan.logical.UnaryPlan;
 import org.elasticsearch.xpack.esql.plan.logical.promql.AcrossSeriesAggregate;
 import org.elasticsearch.xpack.esql.plan.logical.promql.PromqlCommand;
 import org.elasticsearch.xpack.esql.plan.logical.promql.PromqlFunctionCall;
@@ -66,20 +73,30 @@ import org.elasticsearch.xpack.esql.plan.logical.promql.selector.LabelMatchers;
 import org.elasticsearch.xpack.esql.plan.logical.promql.selector.LiteralSelector;
 import org.elasticsearch.xpack.esql.plan.logical.promql.selector.RangeSelector;
 import org.elasticsearch.xpack.esql.plan.logical.promql.selector.Selector;
+import org.elasticsearch.xpack.esql.session.Configuration;
 
 import java.time.Duration;
+import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Set;
+
+import static org.elasticsearch.xpack.esql.core.expression.MetadataAttribute.isTimeSeriesAttributeName;
+import static org.elasticsearch.xpack.esql.expression.function.aggregate.AggregateFunction.withFilter;
+import static org.elasticsearch.xpack.esql.expression.predicate.Predicates.combineAnd;
+import static org.elasticsearch.xpack.esql.expression.predicate.Predicates.combineAndNullable;
 
 /**
  * Translates PromQL logical plan into ESQL plan.
- *
+ * <p>
  * This rule runs before {@link TranslateTimeSeriesAggregate} to convert PromQL-specific plan
  * into standard ESQL nodes (TimeSeriesAggregate, Aggregate, Eval, etc.) that can then be further optimized.
- *
+ * <p>
  * Translation examples:
  * <pre>
  * PromQL: rate(http_requests[5m])
@@ -104,7 +121,7 @@ import java.util.List;
  * </pre>
  *
  * Translation mechanism:
- *
+ * <p>
  * Recursive descent via {@code translateNode()}. Each node returns a {@code TranslationResult}:
  * <ul>
  *   <li>{@code plan} the LogicalPlan built so far</li>
@@ -119,29 +136,43 @@ import java.util.List;
  *   <li>{@link VectorBinaryOperator}: plan = merged from both sides, expression = left op right</li>
  * </ul>
  */
-public final class TranslatePromqlToEsqlPlan extends OptimizerRules.ParameterizedOptimizerRule<PromqlCommand, LogicalOptimizerContext> {
+public final class TranslatePromqlToEsqlPlan extends AnalyzerRules.ParameterizedAnalyzerRule<PromqlCommand, AnalyzerContext> {
+    // Sentinel bounds for open-ended range queries (PROMQL step=X without explicit start/end).
+    // TStep requires explicit lower and upper bounds, so we pass the widest representable range.
+    // Use Instant.EPOCH / MAX_MILLIS_BEFORE_9999 instead of Long.MIN/MAX to avoid time boundary handling in the engine.
+    public static final Instant EPOCH_MIN = Instant.EPOCH;
+    public static final Instant EPOCH_MAX = Instant.ofEpochMilli(DateUtils.MAX_MILLIS_BEFORE_9999);
 
-    // TODO make configurable via lookback_delta parameter and (cluster?) setting
-    public static final Duration DEFAULT_LOOKBACK = Duration.ofMinutes(5);
-    public static final String STEP_COLUMN_NAME = "step";
+    /** Result flows upward */
+    private record TranslationResult(
+        /* ESQL plan built so far. */
+        LogicalPlan plan,
+        /* Reference to this node's numeric value, composed into parent expressions. */
+        Expression expression,
+        /* Label matcher flows up until an aggregate that folds it / push to relation */
+        Expression pendingFilter,
+        /* What aggregate labels the child subtree exposes */
+        LabelSetSpec labelSetSpec
+    ) {
+        TranslationResult(LogicalPlan plan, Expression expression) {
+            this(plan, expression, null, LabelSetSpec.none());
+        }
 
-    public TranslatePromqlToEsqlPlan() {
-        super(OptimizerRules.TransformDirection.UP);
+        TranslationResult(LogicalPlan plan, Expression expression, Expression selectorFilter) {
+            this(plan, expression, selectorFilter, LabelSetSpec.none());
+        }
     }
 
-    /**
-     * Holds ESQL plan built so far and an expression representing the node value.
-     */
-    private record TranslationResult(LogicalPlan plan, Expression expression) {}
-
-    /**
-     * Holds context passed through the recursive translation.
-     */
+    /** Context flows downward */
     private record TranslationContext(
+        /* The root PromQL command. */
         PromqlCommand promqlCommand,
-        LogicalOptimizerContext optimizerContext,
+        /* Analyzer context (configuration, transport version, etc.). */
+        AnalyzerContext analyzerContext,
+        /* Alias for the step bucket expression used in all aggregation groupings. */
         Alias stepBucketAlias,
-        List<Expression> labelFilterConditions
+        /*  What aggregate labels the child subtree MUST expose */
+        LabelSetSpec labelSetSpec
     ) {
         Attribute stepAttr() {
             return stepBucketAlias.toAttribute();
@@ -149,42 +180,71 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
     }
 
     @Override
-    protected LogicalPlan rule(PromqlCommand promqlCommand, LogicalOptimizerContext context) {
-        Alias stepBucketAlias = createStepBucketAlias(promqlCommand);
-        List<Expression> labelFilterConditions = new ArrayList<>();
+    protected boolean skipResolved() {
+        return false;
+    }
 
-        // Base plan EsRelation with timestamp filter
-        LogicalPlan basePlan = withTimestampFilter(promqlCommand, promqlCommand.child());
+    @Override
+    protected LogicalPlan rule(PromqlCommand cmd, AnalyzerContext context) {
+        Alias stepBucketAlias = createStepBucketAlias(cmd, context);
 
-        // Create translation context
-        TranslationContext ctx = new TranslationContext(promqlCommand, context, stepBucketAlias, labelFilterConditions);
+        TranslationContext ctx = new TranslationContext(cmd, context, stepBucketAlias, LabelSetSpec.none());
 
-        TranslationResult result = translateNode(promqlCommand.promqlPlan(), basePlan, ctx);
+        TranslationResult result = translateNode(cmd.promqlPlan(), cmd.child(), ctx);
 
-        LogicalPlan plan = result.plan();
-        Expression valueExpr = result.expression();
-        if (labelFilterConditions.isEmpty() == false) {
-            plan = applyLabelFilters(plan, labelFilterConditions, promqlCommand);
+        var plan = result.plan();
+        var valueExpr = result.expression();
+        var filter = result.pendingFilter();
+
+        // TODO: Fix selector-free PromQL evaluation to produce values even when no data
+        // See https://github.com/elastic/elasticsearch/issues/149791
+
+        if (filter != null) {
+            plan = applyLabelFilter(plan, filter, cmd);
         }
 
         // TimeSeriesAggregate always applies because InstantSelectors adds implicit last_over_time().
         // TODO: If we ever support metric references without last_over_time, we could
         // skip TimeSeriesAggregate and use plain Aggregate instead (see #141501 discussion).
-        if (containsAggregation(plan) == false) {
-            plan = createInnerAggregate(ctx, plan, promqlCommand.promqlPlan().output(), valueExpr);
-            valueExpr = plan.output().getFirst().toAttribute();
+        if (findAggregate(plan, Aggregate.class) == null) {
+            plan = createInnermostAggregatePlan(ctx, plan, LabelSetSpec.of(cmd.promqlPlan().output()), valueExpr);
+            valueExpr = getValueOutput(plan);
         }
 
-        if (promqlCommand.promqlPlan() instanceof VectorBinaryComparison binaryComparison && binaryComparison.filterMode()) {
-            // for comparison with filtering mode, return left operand and apply filter later
-            plan = addComparisonFilter(plan, binaryComparison, context);
+        if (cmd.promqlPlan() instanceof VectorBinaryComparison binaryComparison && binaryComparison.filterMode()) {
+            // for comparison with the filtering mode, return the left operand and apply filter later
+            plan = addComparisonFilter(plan, binaryComparison, context, valueExpr);
         }
 
-        plan = convertValueToDouble(promqlCommand, plan, valueExpr);
-        // ensure we're returning exactly the same columns (including ids) and in the same order before and after optimization
-        plan = new Project(promqlCommand.source(), plan, promqlCommand.output());
-        plan = filterNulls(promqlCommand, plan);
+        plan = applyValueToDoubleConversion(cmd, plan, valueExpr);
+
+        plan = applyProjection(cmd, plan);
+
+        plan = applyNullOutputFilter(cmd, plan);
+
+        plan = withTimestampFilter(cmd, plan, context.configuration());
+
         return plan;
+    }
+
+    private static LogicalPlan applyProjection(PromqlCommand command, LogicalPlan plan) {
+        var lookupMap = new HashMap<String, Attribute>();
+        for (var attr : plan.output()) {
+            lookupMap.put(attr.name(), attr);
+        }
+
+        var projected = new ArrayList<>(command.output());
+        for (int i = 0; i < projected.size(); i++) {
+            var attr = projected.get(i);
+            var lookupAttr = lookupMap.get(attr.name());
+            if (lookupAttr != null && lookupAttr.semanticEquals(attr) == false) {
+                final var tsFieldAttrAlias = new Alias(lookupAttr.source(), attr.name(), lookupAttr, attr.id());
+                plan = new Eval(command.source(), plan, List.of(tsFieldAttrAlias));
+                projected.set(i, tsFieldAttrAlias.toAttribute());
+            }
+        }
+
+        return new Project(command.source(), plan, projected);
     }
 
     /**
@@ -204,32 +264,100 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
     }
 
     /**
-     * Translates an AcrossSeriesAggregate (sum, avg, max, min, count, etc.).
-     * Creates TimeSeriesAggregate if child has no aggregation or Aggregate if child already aggregated.
-     * NOTE: Only AcrossSeriesAggregate nodes create plan-level aggregation nodes.
-     * WithinSeriesAggregate and other PromqlFunctionCall nodes produce
-     * expressions embedded inside the aggregation, but do not create Aggregate plan nodes themselves.
+     * Translates {@code AcrossSeriesAggregate} to an ESQL {@code Aggregate}.
+     * <p>
+     * PromQL aggregation shape is dynamic and can't be expressed in ESQL directly without enumerating the full label set.
+     * We avoid that at plan time (for performance), so the translator carries aggregation shape as a triplet
+     * {@code (G, O, X)} where G = grouping labels, O = output labels, X = excluded labels.
+     * G is either a concrete set of label names or an opaque runtime representation {@code T...} (backed by _timeseries).
+     * Labels in O but not in G are null-filled in the output.
+     * <ul>
+     *   <li>WITHOUT(E): (G, O, X) -> (G\E, G\E, X u E)</li>
+     *   <li>BY(W): (G, O, X) -> (W\X, W, X)</li>
+     * </ul>
+     * <p>
+     * Leaf state is {@code [G=T..., O=T..., X={}]} (all labels present but unknown by name).
+     * <p>
+     * Examples:
+     *
+     * <pre>
+     * sum without(pod) (
+     *   avg without(region) (
+     *     cpu_util
+     *   ) [G=T...\{region}, O=T...\{region}, X={region}]
+     * ) [G=T...\{region,pod}, O=T...\{region,pod}, X={region,pod}]
+     * </pre>
+     *
+     * <pre>
+     * sum by(cluster,region) (
+     *   avg without(region) (
+     *     cpu_util
+     *   ) [G=T...\{region}, O=T...\{region}, X={region}]
+     * ) [G={cluster}, O={cluster,region}, X={region}]   // region is null-filled
+     * </pre>
+     *
+     * <pre>
+     * max without(cluster) (
+     *   sum by(cluster,region) (
+     *     avg without(region) (
+     *       cpu_util
+     *     ) [G=T...\{region}, O=T...\{region}, X={region}]
+     *   ) [G={cluster}, O={cluster,region}, X={region}] // region is null-filled
+     * ) [G={}, O={}, X={region,cluster}]
+     * </pre>
+     *
+     * <pre>
+     * sum without(pod) (
+     *   avg by(cluster,pod) (
+     *     cpu_util
+     *   ) [G={cluster,pod}, O={cluster,pod}, X={}]
+     * ) [G={cluster}, O={cluster}, X={pod}]
+     * </pre>
+     * <pre>
+     * sum by(cluster) (
+     *   avg by(cluster,pod) (
+     *     cpu_util
+     *   ) [G={cluster,pod}, O={cluster,pod}, X={}]
+     * ) [G={cluster}, O={cluster}, X={}]
+     * </pre>
+     *
+     * <p>Only {@code AcrossSeriesAggregate} creates plan-level aggregation nodes.
+     * {@code WithinSeriesAggregate} and other {@code PromqlFunctionCall} nodes are
+     * lowered to expressions and folded into the aggregate.
      */
     private TranslationResult translateAcrossSeriesAggregate(AcrossSeriesAggregate agg, LogicalPlan currentPlan, TranslationContext ctx) {
-        TranslationResult childResult = translateNode(agg.child(), currentPlan, ctx);
-        Expression aggExpr = buildAggregateExpression(agg, childResult.expression(), ctx);
-        if (containsAggregation(childResult.plan())) {
-            // Child already has an aggregate: create outer Aggregate
-            LogicalPlan aggregatePlan = createOuterAggregate(ctx, childResult.plan(), agg, aggExpr);
-            Expression outputRef = getValueOutput(aggregatePlan);
-            return new TranslationResult(aggregatePlan, outputRef);
-        } else {
-            // No aggregate yet: create the innermost TimeSeriesAggregate, folding within-series
-            // function expressions into the aggregation.
-            LogicalPlan timeSeriesAgg = createInnerAggregate(ctx, childResult.plan(), agg.output(), aggExpr);
-            Expression outputRef = getValueOutput(timeSeriesAgg);
-            return new TranslationResult(timeSeriesAgg, outputRef);
-        }
+        LabelSetSpec importAggregateLabels = switch (agg.grouping()) {
+            case BY -> LabelSetSpec.of(agg.groupings(), ctx.labelSetSpec.excluded());
+            case WITHOUT -> LabelSetSpec.without(ctx.labelSetSpec, agg.groupings());
+            case NONE -> LabelSetSpec.none();
+        };
+
+        TranslationContext childCtx = new TranslationContext(
+            ctx.promqlCommand,
+            ctx.analyzerContext,
+            ctx.stepBucketAlias,
+            importAggregateLabels
+        );
+        TranslationResult childResult = translateNode(agg.child(), currentPlan, childCtx);
+
+        LabelSetSpec exportAggregateLabels = switch (agg.grouping()) {
+            case BY -> LabelSetSpec.by(childResult.labelSetSpec, agg.output());
+            case WITHOUT -> LabelSetSpec.without(childResult.labelSetSpec, agg.groupings());
+            case NONE -> LabelSetSpec.none();
+        };
+
+        var aggExpression = createAggregateExpression(agg, childResult.expression(), ctx);
+
+        var resultPlan = findAggregate(childResult.plan(), Aggregate.class) != null
+            /* child already aggregated, no additional `_tsid` grouping needed */
+            ? createOuterAggregatePlan(ctx, childResult.plan(), exportAggregateLabels, aggExpression)
+            /* group by _tsid, timestamp and compute optional aggregates, e.g., avg_over_time() */
+            : createInnermostAggregatePlan(ctx, childResult.plan(), exportAggregateLabels, aggExpression);
+
+        return new TranslationResult(resultPlan, getValueOutput(resultPlan), childResult.pendingFilter(), exportAggregateLabels);
     }
 
-    /**
-     * Translates a ScalarConversionFunction.
-     */
+    /** scalar() collapse to one value per step. */
     private TranslationResult translateScalarConversion(
         ScalarConversionFunction scalarFunc,
         LogicalPlan currentPlan,
@@ -237,36 +365,37 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
     ) {
         TranslationResult childResult = translateNode(scalarFunc.child(), currentPlan, ctx);
 
-        // Foldable: convert to double directly
+        // Constant folds directly
         if (childResult.expression().foldable()) {
-            return new TranslationResult(childResult.plan(), new ToDouble(scalarFunc.source(), childResult.expression()));
+            return new TranslationResult(
+                childResult.plan(),
+                new ToDouble(scalarFunc.source(), childResult.expression()),
+                childResult.pendingFilter()
+            );
         }
 
-        // Child aggregated: grouping by step
-        // E.g. scalar(sum by (cluster) (metric)))
+        // Child aggregated collapsed to step-only grouping
+        // E.g., scalar(sum by (cluster) (metric)))
         Expression scalarExpr = new Scalar(scalarFunc.source(), childResult.expression());
-        if (containsAggregation(childResult.plan())) {
+        if (findAggregate(childResult.plan(), Aggregate.class) != null) {
             // plain Aggregate grouped by step only, collapsing all series into one value per step.
-            Attribute stepAttr = ctx.stepAttr();
             Alias aggAlias = new Alias(scalarExpr.source(), ctx.promqlCommand().valueColumnName(), scalarExpr);
+            Attribute stepAttr = ctx.stepAttr();
             LogicalPlan aggregate = new Aggregate(
                 ctx.promqlCommand().source(),
                 childResult.plan(),
                 List.of(stepAttr),
                 List.of(aggAlias, stepAttr)
             );
-            return new TranslationResult(aggregate, getValueOutput(aggregate));
+            return new TranslationResult(aggregate, getValueOutput(aggregate), childResult.pendingFilter());
         }
 
-        LogicalPlan timeSeriesAgg = createInnerAggregate(ctx, childResult.plan(), scalarFunc.output(), scalarExpr);
-        return new TranslationResult(timeSeriesAgg, getValueOutput(timeSeriesAgg));
+        LogicalPlan timeSeriesAgg = createInnermostAggregatePlan(ctx, childResult.plan(), LabelSetSpec.none(), scalarExpr);
+        return new TranslationResult(timeSeriesAgg, getValueOutput(timeSeriesAgg), childResult.pendingFilter());
     }
 
-    /**
-     * Gets the value output from an aggregate plan.
-     */
+    /** The first output attribute is always the value column. */
     private static Expression getValueOutput(LogicalPlan plan) {
-        // The value column is always the first output attribute
         return plan.output().getFirst().toAttribute();
     }
 
@@ -280,46 +409,27 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
         if (functionCall.child() instanceof RangeSelector rangeSelector) {
             window = rangeSelector.range();
             if (isImplicitRangePlaceholder(window)) {
-                window = resolveImplicitRangeWindow(ctx.promqlCommand());
+                window = ctx.promqlCommand().resolveImplicitRangeWindow();
             }
         }
 
         PromqlFunctionRegistry.PromqlContext promqlCtx = new PromqlFunctionRegistry.PromqlContext(
             ctx.promqlCommand().timestamp(),
             window,
-            ctx.stepAttr()
+            ctx.stepAttr(),
+            ctx.analyzerContext().configuration()
         );
 
-        Expression function = PromqlFunctionRegistry.INSTANCE.buildEsqlFunction(
-            functionCall.functionName(),
-            functionCall.source(),
-            childResult.expression(),
-            promqlCtx,
-            functionCall.parameters()
-        );
+        Expression function = functionCall.buildEsqlFunction(childResult.expression(), promqlCtx);
 
-        // This can happen when trying to provide a counter to a function that doesn't support it e.g. avg_over_time on a counter
-        // This is essentially a bug since this limitation doesn't exist in PromQL itself.
-        // Throwing an error here to avoid generating invalid plans with obscure errors downstream.
-        Expression.TypeResolution typeResolution = function.typeResolved();
-        if (typeResolution.unresolved()) {
-            throw new QlIllegalArgumentException("Could not resolve type for function [{}]: {}", function, typeResolution.message());
-        }
-
-        // If child is aggregate, add Eval to compute function.
-        //
-        // Example: ceil(sum by (cluster) (foo)) becomes:
-        // Eval[ceil(sum_result)]
-        // \_ TimeSeriesAggregate[sum_result = sum(x), groupBy=[step, cluster]]
-        //
-        // This handles both cases when aggregate is TimeSeriesAggregate or more generic Aggregate.
-        if (containsAggregation(childResult.plan())) {
+        // Wrap already aggregated child in Eval
+        if (findAggregate(childResult.plan(), Aggregate.class) != null) {
             Alias evalAlias = new Alias(function.source(), ctx.promqlCommand().valueColumnName(), function);
             LogicalPlan evalPlan = new Eval(ctx.promqlCommand().source(), childResult.plan(), List.of(evalAlias));
-            return new TranslationResult(evalPlan, evalAlias.toAttribute());
+            return new TranslationResult(evalPlan, evalAlias.toAttribute(), childResult.pendingFilter(), childResult.labelSetSpec());
         }
 
-        return new TranslationResult(childResult.plan(), function);
+        return new TranslationResult(childResult.plan(), function, childResult.pendingFilter(), childResult.labelSetSpec());
     }
 
     private static boolean isImplicitRangePlaceholder(Expression range) {
@@ -329,39 +439,19 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
     }
 
     /**
-     * Resolves the implicit range placeholder to a concrete duration based on step and scrape interval.
-     * The implicit window is calculated as {@code max(step, scrape_interval)}.
-     */
-    private static Literal resolveImplicitRangeWindow(PromqlCommand promqlCommand) {
-        Duration step = foldDuration(resolveTimeBucketSize(promqlCommand), "step");
-        Duration scrapeInterval = foldDuration(promqlCommand.scrapeInterval(), "scrape_interval");
-        return Literal.timeDuration(promqlCommand.source(), step.compareTo(scrapeInterval) >= 0 ? step : scrapeInterval);
-    }
-
-    private static Duration foldDuration(Expression expression, String paramName) {
-        if (expression != null && expression.foldable() && expression.fold(FoldContext.small()) instanceof Duration duration) {
-            return duration;
-        }
-        throw new QlIllegalArgumentException("Expected [{}] to be a duration literal, got [{}]", paramName, expression);
-    }
-
-    /**
      * Translates a scalar function (time(), etc.).
      * These produce expressions without modifying the plan.
      */
     private TranslationResult translateScalarFunction(ScalarFunction scalarFunction, LogicalPlan currentPlan, TranslationContext ctx) {
-        PromqlFunctionRegistry.PromqlContext promqlCtx = new PromqlFunctionRegistry.PromqlContext(
-            ctx.promqlCommand().timestamp(),
-            null,
-            ctx.stepAttr()
+        var function = scalarFunction.buildEsqlFunction(
+            new PromqlFunctionRegistry.PromqlContext(
+                ctx.promqlCommand().timestamp(),
+                null,
+                ctx.stepAttr(),
+                ctx.analyzerContext().configuration()
+            )
         );
-        Expression function = PromqlFunctionRegistry.INSTANCE.buildEsqlFunction(
-            scalarFunction.functionName(),
-            scalarFunction.source(),
-            null,
-            promqlCtx,
-            List.of()
-        );
+
         return new TranslationResult(currentPlan, function);
     }
 
@@ -374,7 +464,7 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
         Expression leftExpr = new ToDouble(leftResult.expression().source(), leftResult.expression());
 
         if (binaryOp instanceof VectorBinaryComparison comp && comp.filterMode()) {
-            return new TranslationResult(leftResult.plan(), leftExpr);
+            return new TranslationResult(leftResult.plan(), leftExpr, leftResult.pendingFilter(), leftResult.labelSetSpec());
         }
 
         TranslationResult rightResult = translateNode(binaryOp.right(), currentPlan, ctx);
@@ -382,55 +472,75 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
 
         Expression binaryExpr = binaryOp.binaryOp()
             .asFunction()
-            .create(binaryOp.source(), leftExpr, rightExpr, ctx.optimizerContext().configuration());
+            .create(binaryOp.source(), leftExpr, rightExpr, ctx.analyzerContext().configuration());
 
-        boolean leftAgg = containsAggregation(leftResult.plan());
-        boolean rightAgg = containsAggregation(rightResult.plan());
+        boolean leftAgg = findAggregate(leftResult.plan(), Aggregate.class) != null;
+        boolean rightAgg = findAggregate(rightResult.plan(), Aggregate.class) != null;
 
-        // If both sides have Aggregate, use a new joint Aggregate plan;
-        // otherwise, use the plan from the side that has Aggregate.
-        // In both cases aggregate expressions participate in the Eval node that wraps the result.
+        // Both aggregated -> fold into one; otherwise take the aggregated side's plan.
         LogicalPlan resultPlan;
         if (leftAgg && rightAgg) {
-            resultPlan = foldBinaryExpressionAggregates(leftResult.plan(), rightResult.plan());
+            resultPlan = foldBinaryOperatorAggregate(leftResult, rightResult);
         } else if (leftAgg) {
             resultPlan = leftResult.plan();
         } else {
             resultPlan = rightResult.plan();
         }
 
-        if (containsAggregation(resultPlan)) {
-            Alias evalAlias = new Alias(binaryExpr.source(), ctx.promqlCommand().valueColumnName(), binaryExpr);
-            LogicalPlan evalPlan = new Eval(ctx.promqlCommand().source(), resultPlan, List.of(evalAlias));
-            return new TranslationResult(evalPlan, evalAlias.toAttribute());
+        Expression pendingFilter = null;
+        if (!leftAgg || !rightAgg) {
+            pendingFilter = combineAndNullable(Arrays.asList(leftResult.pendingFilter(), rightResult.pendingFilter()));
         }
 
-        return new TranslationResult(resultPlan, binaryExpr);
+        // TODO: vector matching (on/ignoring) https://github.com/elastic/elasticsearch/issues/142596
+        LabelSetSpec grouping = leftResult.labelSetSpec().declared().isEmpty() == false
+            ? leftResult.labelSetSpec()
+            : rightResult.labelSetSpec();
+
+        if (findAggregate(resultPlan, Aggregate.class) != null) {
+            Alias evalAlias = new Alias(binaryExpr.source(), ctx.promqlCommand().valueColumnName(), binaryExpr);
+            LogicalPlan evalPlan = new Eval(ctx.promqlCommand().source(), resultPlan, List.of(evalAlias));
+            return new TranslationResult(evalPlan, evalAlias.toAttribute(), pendingFilter, grouping);
+        }
+
+        return new TranslationResult(resultPlan, binaryExpr, pendingFilter, grouping);
     }
 
     /**
      * Fold left and right aggregates into a single plan.
      */
-    private static LogicalPlan foldBinaryExpressionAggregates(LogicalPlan leftPlan, LogicalPlan rightPlan) {
+    private static LogicalPlan foldBinaryOperatorAggregate(TranslationResult left, TranslationResult right) {
         var names = new TemporaryNameGenerator.Monotonic();
-        var rightAgg = rightPlan.collect(Aggregate.class).getFirst();
+        var rightAgg = right.plan().collect(Aggregate.class).getFirst();
 
-        var result = leftPlan.transformDown(Aggregate.class, leftAgg -> {
-            // Different groupings require vector matching semantics (on/ignoring/group_left/group_right)
-            // which is tracked in TODO: https://github.com/elastic/elasticsearch/issues/142596
-            // This check is a safety net; such queries should ideally be rejected during validation.
+        var result = left.plan().transformDown(Aggregate.class, leftAgg -> {
+
+            Set<String> leftGroupingNames = new HashSet<>();
+            for (Expression grouping : leftAgg.groupings()) {
+                if (grouping instanceof NamedExpression ne) {
+                    leftGroupingNames.add(ne.name());
+                }
+            }
+            Set<String> rightGroupingNames = new HashSet<>();
+            for (Expression grouping : rightAgg.groupings()) {
+                if (grouping instanceof NamedExpression ne) {
+                    rightGroupingNames.add(ne.name());
+                }
+            }
+            // TODO: different groupings need vector matching https://github.com/elastic/elasticsearch/issues/142596
             boolean areGroupingsCompatible = leftAgg.groupings().size() == rightAgg.groupings().size()
-                && new HashSet<>(leftAgg.groupings()).containsAll(rightAgg.groupings());
+                && leftGroupingNames.equals(rightGroupingNames);
 
             if (areGroupingsCompatible == false) {
                 throw new QlIllegalArgumentException("binary expressions with different grouping keys not supported yet");
             }
 
-            // Unique aggregates from both sides
-            var uniqueAggregates = new LinkedHashSet<NamedExpression>(leftAgg.aggregates());
-            uniqueAggregates.addAll(rightAgg.aggregates());
+            // Merge aggregates; each side keeps its own filter condition.
+            var uniqueAggregates = new LinkedHashSet<Expression>();
+            uniqueAggregates.addAll(withFilter(leftAgg.aggregates(), left.pendingFilter()));
+            uniqueAggregates.addAll(withFilter(rightAgg.aggregates(), right.pendingFilter()));
 
-            var newAggregates = uniqueAggregates.stream().map(e -> {
+            var newAggregates = uniqueAggregates.stream().map(e -> (NamedExpression) e).map(e -> {
                 Expression inner = e;
                 if (e instanceof Alias a) {
                     inner = a.child();
@@ -442,9 +552,8 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
             return leftAgg.with(leftAgg.child(), leftAgg.groupings(), newAggregates);
         });
 
-        // If right had Eval nodes wrapping its Aggregate layer them on top of the merged plan
-        // E.g. sum(a) / ceil(max(b)) becomes Eval[ceil(max(b))] -> Aggregate[sum(a), max(b)]
-        var rightEvals = rightPlan.collect(Eval.class);
+        // Replay right side's Evals on top of merged aggregate.
+        var rightEvals = right.plan().collect(Eval.class);
         for (Eval eval : rightEvals.reversed()) {
             result = new Eval(eval.source(), result, eval.fields());
         }
@@ -456,11 +565,12 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
      * Adds label filter conditions to the context.
      */
     private TranslationResult translateSelector(Selector selector, LogicalPlan currentPlan, TranslationContext ctx) {
-        Expression matcherCondition = translateLabelMatchers(selector.source(), selector.labels(), selector.labelMatchers());
-        if (matcherCondition != null) {
-            ctx.labelFilterConditions().add(matcherCondition);
-        }
-
+        Expression matcherCondition = translateLabelMatchers(
+            selector.source(),
+            selector.labels(),
+            selector.labelMatchers(),
+            ctx.analyzerContext().configuration()
+        );
         Expression expr;
         if (selector instanceof LiteralSelector literalSelector) {
             expr = literalSelector.literal();
@@ -471,125 +581,211 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
             expr = selector.series();
         }
 
-        return new TranslationResult(currentPlan, expr);
+        // Non-literal selectors pass through parent demand; EsRelation must have required dimensions.
+        LabelSetSpec grouping = (selector instanceof LiteralSelector) ? LabelSetSpec.none() : ctx.labelSetSpec();
+
+        return new TranslationResult(currentPlan, expr, matcherCondition, grouping);
     }
 
     /**
-     * Checks if the plan already contains an aggregation stage.
+     * Walks through UnaryPlan wrappers (Eval, Project, Filter, etc.) to find the nearest
+     * aggregate of the given type. Returns null if none is found.
      */
-    private static boolean containsAggregation(LogicalPlan plan) {
-        if (plan instanceof Aggregate) {
-            return true;
+    private static <T extends Aggregate> T findAggregate(LogicalPlan plan, Class<T> type) {
+        if (type.isInstance(plan)) {
+            return type.cast(plan);
         }
-        if (plan instanceof Eval eval) {
-            // Eval may be on top of an aggregate
-            return containsAggregation(eval.child());
+        if (plan instanceof UnaryPlan unary) {
+            return findAggregate(unary.child(), type);
         }
-        return false;
+        return null;
     }
 
-    /**
-     * Builds the aggregate function expression for an AcrossSeriesAggregate.
-     */
-    private static Expression buildAggregateExpression(AcrossSeriesAggregate agg, Expression inputValue, TranslationContext ctx) {
+    /** Build the aggregate function (sum, max, etc.) from the PromQL registry. */
+    private static Expression createAggregateExpression(AcrossSeriesAggregate agg, Expression inputValue, TranslationContext ctx) {
         PromqlFunctionRegistry.PromqlContext promqlCtx = new PromqlFunctionRegistry.PromqlContext(
             ctx.promqlCommand().timestamp(),
             AggregateFunction.NO_WINDOW,
-            ctx.stepAttr()
+            ctx.stepAttr(),
+            ctx.analyzerContext().configuration()
         );
-        return PromqlFunctionRegistry.INSTANCE.buildEsqlFunction(agg.functionName(), agg.source(), inputValue, promqlCtx, agg.parameters());
+        return agg.buildEsqlFunction(inputValue, promqlCtx);
     }
 
-    /**
-     * Creates a TimeSeriesAggregate node for the innermost aggregation.
-     */
-    private static LogicalPlan createInnerAggregate(
-        TranslationContext ctx,
-        LogicalPlan basePlan,
-        List<Attribute> labelGroupings,
-        Expression aggExpr
-    ) {
-        PromqlCommand promqlCommand = ctx.promqlCommand();
-        List<NamedExpression> aggs = new ArrayList<>();
-        List<Expression> groupings = new ArrayList<>();
+    private static LogicalPlan createInnermostAggregatePlan(TranslationContext ctx, LogicalPlan plan, LabelSetSpec labels, Expression agg) {
+        PromqlCommand command = ctx.promqlCommand();
+        Source source = command.promqlPlan().source();
 
-        // Check for time series grouping (special handling for _tsid)
-        FieldAttribute timeSeriesGrouping = getTimeSeriesGrouping(labelGroupings);
-        if (timeSeriesGrouping != null) {
-            aggExpr = new Values(aggExpr.source(), aggExpr);
-            basePlan = basePlan.transformDown(EsRelation.class, r -> r.withAdditionalAttribute(timeSeriesGrouping));
+        // Self-resolution: at the innermost level there is no child aggregation to resolve against.
+        // This just splits declared labels into keys (_timeseries) vs attributes (concrete labels).
+        // var spec = labels.apply(labels);
+        // List<Attribute> all = new ArrayList<>(labels.excluded());
+        // all.addAll(ctx.labelSetSpec.excluded());
+        // List<Attribute> resolvedExcluded = all.stream().filter(a -> a instanceof FieldAttribute fa &&
+        // fa.isDimension()).distinct().toList();
+
+        var spec = labels.withExcluded(ctx.labelSetSpec().excluded()).apply();
+
+        boolean needsTimeSeriesGrouping = hasTSGrouping(spec.includedGroupings()) || spec.excludedGroupings().isEmpty() == false;
+        // TranslateTimeSeriesAggregate splits this node into two phases, replacing inner
+        // TimeSeriesAggregateFunctions (e.g. LastOverTime) with references to phase-1 results.
+        // The phase-2 expression must remain a valid AggregateFunction inside the Aggregate node.
+        // Sum(LastOverTime(m)) -> Sum(ref) -- Sum survives, no wrap needed
+        // LastOverTime(m) -> ref -- bare ref, needs Values(ref)
+        // Mul(LastOverTime(m), 8) -> Mul(ref, 8) -- not an agg, needs Values(Mul(ref,8))
+        // Guarded by needsTimeSeriesGrouping because without dimension grouping (e.g. constants
+        // like vector(5)) TranslateTimeSeriesAggregate passes Literals straight to phase 1.
+        boolean wrapWithValues = (agg instanceof AggregateFunction == false) || (agg instanceof TimeSeriesAggregateFunction);
+        if (needsTimeSeriesGrouping && wrapWithValues) {
+            agg = new Values(agg.source(), agg);
         }
 
-        // Value aggregation
-        aggs.add(new Alias(aggExpr.source(), promqlCommand.valueColumnName(), aggExpr));
-        Attribute stepAttr = ctx.stepAttr();
-        aggs.add(stepAttr);
-        for (Attribute grouping : labelGroupings) {
-            if (grouping != timeSeriesGrouping) {
-                aggs.add(grouping);
-            }
-        }
-
-        // Groupings: step + label groupings
+        var groupings = new ArrayList<Expression>();
         groupings.add(ctx.stepBucketAlias());
-        groupings.addAll(labelGroupings);
 
-        return new TimeSeriesAggregate(promqlCommand.promqlPlan().source(), basePlan, groupings, aggs, null, promqlCommand.timestamp());
-    }
+        var aggregates = new ArrayList<NamedExpression>();
+        aggregates.add(new Alias(agg.source(), command.valueColumnName(), agg));
+        aggregates.add(ctx.stepAttr());
 
-    /**
-     * Creates an Aggregate node for outer aggregation stages.
-     * The aggExpr contains reference to the child's output.
-     */
-    private static LogicalPlan createOuterAggregate(
-        TranslationContext ctx,
-        LogicalPlan childPlan,
-        AcrossSeriesAggregate agg,
-        Expression aggExpr
-    ) {
-        PromqlCommand promqlCommand = ctx.promqlCommand();
-        Attribute stepAttr = ctx.stepAttr();
+        if (needsTimeSeriesGrouping) {
+            var tw = new TimeSeriesWithout(source, new ArrayList<>(spec.excludedGroupings())).toAttribute();
+            groupings.add(tw);
+            aggregates.add(tw.toAttribute());
+        }
 
-        List<Alias> missingGroupingAliases = new ArrayList<>();
-        List<Attribute> resolvedGroupings = new ArrayList<>();
-        List<Attribute> childOutput = childPlan.output();
-
-        for (Attribute grouping : agg.output()) {
-            if (childOutput.contains(grouping)) {
-                resolvedGroupings.add(grouping);
-            } else {
-                // If outer aggregate requests a grouping the inner doesn't produce we fill with null
-                // E.g., "max by (cluster) (min by (pod) (...))" inner outputs "pod" but outer wants "cluster"
-                Alias nullAlias = new Alias(grouping.source(), grouping.name(), new Literal(grouping.source(), null, grouping.dataType()));
-                missingGroupingAliases.add(nullAlias);
-                resolvedGroupings.add(nullAlias.toAttribute());
+        // Add non `_timeseries` keys as passthrough groupings and aggregates
+        for (Attribute key : spec.includedGroupings()) {
+            if (isTimeSeriesAttributeName(key.name()) == false) {
+                groupings.add(key);
+                aggregates.add(key);
             }
         }
 
-        LogicalPlan plan = missingGroupingAliases.isEmpty()
-            ? childPlan
-            : new Eval(promqlCommand.source(), childPlan, missingGroupingAliases);
-
-        Alias aggAlias = new Alias(aggExpr.source(), promqlCommand.valueColumnName(), aggExpr);
-
-        List<Expression> groupings = new ArrayList<>();
-        groupings.add(stepAttr);
-        groupings.addAll(resolvedGroupings);
-
-        List<NamedExpression> aggs = new ArrayList<>();
-        aggs.add(aggAlias);
-        aggs.add(stepAttr);
-        aggs.addAll(resolvedGroupings);
-
-        return new Aggregate(promqlCommand.source(), plan, groupings, aggs);
+        return new TimeSeriesAggregate(
+            source,
+            plan,
+            groupings,
+            aggregates,
+            null,
+            command.timestamp(),
+            TimeSeriesAggregate.Origin.PROMQL_COMMAND
+        );
     }
 
-    /**
-     * Applies label filters to the plan at the appropriate level.
-     * Finds the base EsRelation and adds a Filter on top of it.
-     */
-    private static LogicalPlan applyLabelFilters(LogicalPlan plan, List<Expression> labelFilterConditions, PromqlCommand promqlCommand) {
-        Expression filterCondition = Predicates.combineAnd(labelFilterConditions);
+    private static boolean hasTSGrouping(List<Attribute> groupings) {
+        return groupings.stream().anyMatch(attribute -> MetadataAttribute.isTimeSeriesAttributeName(attribute.name()));
+    }
+
+    /** Outer aggregation over an already-aggregated child. */
+    private static LogicalPlan createOuterAggregatePlan(TranslationContext ctx, LogicalPlan plan, LabelSetSpec labels, Expression aggExpr) {
+        PromqlCommand promqlCommand = ctx.promqlCommand();
+        NamedExpression value = new Alias(aggExpr.source(), promqlCommand.valueColumnName(), aggExpr);
+
+        var spec = labels.withIncluded(plan.output()).apply();
+
+        if (labels.excluded().isEmpty() == false && hasTSGrouping(spec.includedGroupings())) {
+            // Pack all carried dimensions before the aggregate to prevent multi-valued splitting,
+            // then Unpack after. This covers keys (_timeseries or concrete), attributes (labels
+            // to pass through), and missing labels (null-synthesized for BY over WITHOUT).
+            // TODO: TranslateTimeSeriesAggregate independently unpacks the inner TSA's dimensions,
+            // then we re-pack them here. A TSA flag to skip its unpack would eliminate this redundant cycle.
+
+            Source source = ctx.promqlCommand().source();
+            Attribute step = ctx.stepAttr();
+
+            // Null-synthesize missing labels before packing
+            List<Alias> nullAliases = new ArrayList<>();
+            if (spec.missingAttributes().isEmpty() == false) {
+                for (var missing : spec.missingAttributes()) {
+                    nullAliases.add(nullAlias(missing));
+                }
+                plan = new Eval(source, plan, nullAliases);
+            }
+
+            // Build the full list of attributes to pack: keys + attributes + missing
+            List<Attribute> allToPack = new ArrayList<>();
+            allToPack.addAll(spec.includedGroupings());
+            allToPack.addAll(spec.matchedAttributes());
+            for (Alias na : nullAliases) {
+                allToPack.add(na.toAttribute());
+            }
+
+            List<Alias> packAliases = new ArrayList<>();
+            List<Expression> groupings = new ArrayList<>();
+            groupings.add(step);
+            List<NamedExpression> aggKeys = new ArrayList<>();
+            List<Alias> unpackAliases = new ArrayList<>();
+            var names = new TemporaryNameGenerator.Monotonic();
+
+            for (Attribute attr : allToPack) {
+                Alias pack = new Alias(source, names.next(attr.name()), new PackDimension(source, attr));
+                packAliases.add(pack);
+                groupings.add(pack.toAttribute());
+                aggKeys.add(pack.toAttribute());
+
+                unpackAliases.add(
+                    new Alias(source, attr.name(), new UnpackDimension(source, pack.toAttribute(), attr.dataType()), attr.id())
+                );
+            }
+
+            Eval packEval = new Eval(source, plan, packAliases);
+
+            var aggregates = new ArrayList<NamedExpression>(aggKeys.size() + 2);
+            aggregates.add(value);
+            aggregates.add(step);
+            aggregates.addAll(aggKeys);
+
+            Aggregate agg = new Aggregate(source, packEval, groupings, aggregates);
+            Eval unpackEval = new Eval(source, agg, unpackAliases);
+
+            List<NamedExpression> projections = new ArrayList<>();
+            projections.add(value.toAttribute());
+            projections.add(step);
+            for (Alias unpack : unpackAliases) {
+                projections.add(unpack.toAttribute());
+            }
+            return new Project(source, unpackEval, projections);
+        }
+
+        // BY/NONE over already-aggregated child: group by concrete labels only.
+        // _timeseries is NOT a grouping key; concrete labels from attributes become keys.
+        var keys = new ArrayList<NamedExpression>();
+        for (var key : spec.includedGroupings()) {
+            if (isTimeSeriesAttributeName(key.name()) == false) {
+                keys.add(key);
+            }
+        }
+        keys.addAll(spec.matchedAttributes());
+        if (spec.missingAttributes().isEmpty() == false) {
+            List<Alias> nullAliases = new ArrayList<>();
+            for (var missing : spec.missingAttributes()) {
+                var alias = nullAlias(missing);
+                nullAliases.add(alias);
+                keys.add(alias.toAttribute());
+            }
+            plan = new Eval(promqlCommand.source(), plan, nullAliases);
+        }
+
+        var step = ctx.stepAttr();
+        var groupings = new ArrayList<Expression>(keys.size() + 1);
+        groupings.add(step);
+        groupings.addAll(keys);
+
+        var aggregates = new ArrayList<NamedExpression>(keys.size() + 2);
+        aggregates.add(value);
+        aggregates.add(step);
+        aggregates.addAll(keys);
+
+        return new Aggregate(ctx.promqlCommand().source(), plan, groupings, aggregates);
+    }
+
+    private static Alias nullAlias(Attribute attribute) {
+        var nullLiteral = new Literal(attribute.source(), null, attribute.dataType());
+        return new Alias(attribute.source(), attribute.name(), nullLiteral, attribute.id());
+    }
+
+    /** Push label filter down to EsRelation level */
+    private static LogicalPlan applyLabelFilter(LogicalPlan plan, Expression filterCondition, PromqlCommand promqlCommand) {
         return plan.transformUp(LogicalPlan.class, p -> {
             if (p instanceof Filter f && f.child() instanceof EsRelation) {
                 // Already has a filter on EsRelation, combine conditions
@@ -607,55 +803,47 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
      * Note that this doesn't filter out label columns that are null, as those are valid in PromQL.
      * Example: {@code sum by (unknown_label) (metric)} is equivalent to {@code sum(metric)} in PromQL.
      */
-    private static LogicalPlan filterNulls(PromqlCommand promqlCommand, LogicalPlan plan) {
+    private static LogicalPlan applyNullOutputFilter(PromqlCommand promqlCommand, LogicalPlan plan) {
         return new Filter(promqlCommand.source(), plan, new IsNotNull(plan.output().getFirst().source(), plan.output().getFirst()));
     }
 
-    private static FieldAttribute getTimeSeriesGrouping(List<Attribute> groupings) {
-        for (Attribute attr : groupings) {
-            if (attr instanceof FieldAttribute fieldAttr
-                && fieldAttr.field().getTimeSeriesFieldType() == EsField.TimeSeriesFieldType.DIMENSION
-                && fieldAttr.name().equals(MetadataAttribute.TIMESERIES)) {
-                return fieldAttr;
-            }
+    private static LogicalPlan withTimestampFilter(PromqlCommand promqlCommand, LogicalPlan plan, Configuration configuration) {
+        Literal start = promqlCommand.start();
+        Literal end = promqlCommand.end();
+        var source = promqlCommand.source();
+        var step = promqlCommand.stepAttribute();
+
+        // Apply source filter: {@code t >= start - max(w)} AND {@code t <= end}
+        if (start.value() != null && end.value() != null) {
+            var timestamp = promqlCommand.timestamp();
+            var window = promqlCommand.sourceFilterWindow();
+            var child = promqlCommand.child();
+
+            var lo = new GreaterThanOrEqual(source, timestamp, new Sub(source, start, Literal.timeDuration(source, window), configuration));
+            var hi = new LessThanOrEqual(source, timestamp, end);
+            plan = plan.transformUp(p -> p == child, p -> new Filter(source, p, new And(source, lo, hi)));
         }
-        return null;
+
+        // Apply projection filter, i.e. final output
+        var lo = new GreaterThanOrEqual(source, step, start.value() != null ? start : Literal.dateTime(source, EPOCH_MIN));
+        var hi = new LessThanOrEqual(source, step, end.value() != null ? end : Literal.dateTime(source, EPOCH_MAX));
+        return new Filter(source, plan, new And(source, lo, hi));
     }
 
-    /**
-     * Adds a Filter node for specified time range.
-     */
-    private static LogicalPlan withTimestampFilter(PromqlCommand promqlCommand, LogicalPlan plan) {
-        if (promqlCommand.start().value() != null && promqlCommand.end().value() != null) {
-            Source promqlSource = promqlCommand.source();
-            Expression timestamp = promqlCommand.timestamp();
-            plan = new Filter(
-                promqlSource,
-                plan,
-                new And(
-                    promqlSource,
-                    new GreaterThanOrEqual(promqlSource, timestamp, promqlCommand.start()),
-                    new LessThanOrEqual(promqlSource, timestamp, promqlCommand.end())
-                )
-            );
-        }
-        return plan;
-    }
-
-    /**
-     * Adds a Filter node for comparison filtering.
-     */
-    private LogicalPlan addComparisonFilter(LogicalPlan plan, VectorBinaryComparison binaryComparison, LogicalOptimizerContext context) {
-        Attribute left = plan.output().getFirst().toAttribute();
+    /** Comparison filter (e.g., metric > x) */
+    private LogicalPlan addComparisonFilter(
+        LogicalPlan plan,
+        VectorBinaryComparison binaryComparison,
+        AnalyzerContext context,
+        Expression left
+    ) {
         ToDouble right = new ToDouble(binaryComparison.right().source(), ((LiteralSelector) binaryComparison.right()).literal());
         Function condition = binaryComparison.op().asFunction().create(binaryComparison.source(), left, right, context.configuration());
         return new Filter(binaryComparison.source(), plan, condition);
     }
 
-    /**
-     * Ensures the value column is of type double.
-     */
-    private static LogicalPlan convertValueToDouble(PromqlCommand promqlCommand, LogicalPlan plan, Expression valueExpr) {
+    /** Ensure value column is double */
+    private static LogicalPlan applyValueToDoubleConversion(PromqlCommand promqlCommand, LogicalPlan plan, Expression valueExpr) {
         Alias convertedValue = new Alias(
             promqlCommand.source(),
             promqlCommand.valueColumnName(),
@@ -665,64 +853,46 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
         return new Eval(promqlCommand.source(), plan, List.of(convertedValue));
     }
 
-    private static Alias createStepBucketAlias(PromqlCommand promqlCommand) {
-        Expression timeBucketSize = resolveTimeBucketSize(promqlCommand);
-        Bucket b = new Bucket(
-            timeBucketSize.source(),
-            promqlCommand.timestamp(),
-            timeBucketSize,
-            null,
-            null,
-            ConfigurationAware.CONFIGURATION_MARKER
-        );
-        return new Alias(b.source(), STEP_COLUMN_NAME, b, promqlCommand.stepId());
-    }
+    private static Alias createStepBucketAlias(PromqlCommand p, AnalyzerContext context) {
+        var cfg = context.configuration();
+        var source = p.source();
 
-    private static Expression resolveTimeBucketSize(PromqlCommand promqlCommand) {
-        if (promqlCommand.isRangeQuery()) {
-            if (promqlCommand.step().value() != null) {
-                return promqlCommand.step();
-            }
-            return resolveAutoStepFromBuckets(promqlCommand);
+        if (p.isInstantQuery()) {
+            Expression stepSize = Literal.timeDuration(source, p.resolveInstantQueryWindow());
+            Expression start = new Sub(p.start().source(), p.start(), stepSize, cfg);
+            var tstep = new TStep(stepSize.source(), stepSize, start, p.end(), p.timestamp(), cfg);
+            return new Alias(tstep.source(), p.stepColumnName(), tstep, p.stepId());
         }
-        // use default lookback for instant queries
-        return Literal.timeDuration(promqlCommand.source(), DEFAULT_LOOKBACK);
-    }
 
-    private static Literal resolveAutoStepFromBuckets(PromqlCommand promqlCommand) {
-        Bucket autoBucket = new Bucket(
-            promqlCommand.buckets().source(),
-            promqlCommand.timestamp(),
-            promqlCommand.buckets(),
-            promqlCommand.start(),
-            promqlCommand.end(),
-            ConfigurationAware.CONFIGURATION_MARKER
-        );
-        long rangeStart = ((Number) promqlCommand.start().value()).longValue();
-        long rangeEnd = ((Number) promqlCommand.end().value()).longValue();
-        var rounding = autoBucket.getDateRounding(FoldContext.small(), rangeStart, rangeEnd);
-        long roundedStart = rounding.round(rangeStart);
-        long nextRoundedValue = rounding.nextRoundingValue(roundedStart);
-        return Literal.timeDuration(promqlCommand.source(), Duration.ofMillis(Math.max(1L, nextRoundedValue - roundedStart)));
+        Expression timeBucketSize = p.resolveTimeBucketSize();
+        Expression start = p.start().value() != null ? p.start() : Literal.dateTime(source, EPOCH_MIN);
+        Expression end = p.end().value() != null ? p.end() : Literal.dateTime(source, EPOCH_MAX);
+        var tstep = new TStep(timeBucketSize.source(), timeBucketSize, start, end, p.timestamp(), cfg);
+        return new Alias(tstep.source(), p.stepColumnName(), tstep, p.stepId());
     }
 
     /**
      * Translates PromQL label matchers into ESQL filter expressions.
      * <p>
      * Uses AutomatonUtils to detect optimizable patterns:
-     * - Exact match → field == "value"
-     * - Prefix pattern (prefix.*) → field STARTS_WITH "prefix"
-     * - Suffix pattern (.*suffix) → field ENDS_WITH "suffix"
-     * - Simple alternation (a|b|c) → field IN ("a", "b", "c")
-     * - Disjoint prefixes → field STARTS_WITH "p1" OR field STARTS_WITH "p2"
-     * - Disjoint suffixes → field ENDS_WITH "s1" OR field ENDS_WITH "s2"
-     * - Complex patterns → field RLIKE "pattern"
+     * - Exact match -> field == "value"
+     * - Prefix pattern (prefix.*) -> field STARTS_WITH "prefix"
+     * - Suffix pattern (.*suffix) -> field ENDS_WITH "suffix"
+     * - Simple alternation (a|b|c) -> field IN ("a", "b", "c")
+     * - Disjoint prefixes -> field STARTS_WITH "p1" OR field STARTS_WITH "p2"
+     * - Disjoint suffixes -> field ENDS_WITH "s1" OR field ENDS_WITH "s2"
+     * - Complex patterns -> field RLIKE "pattern"
      *
      * @param source        the source location for error reporting
      * @param labelMatchers the PromQL label matchers to translate
      * @return an ESQL Expression combining all label matcher conditions with AND
      */
-    private static Expression translateLabelMatchers(Source source, List<Expression> fields, LabelMatchers labelMatchers) {
+    private static Expression translateLabelMatchers(
+        Source source,
+        List<Expression> fields,
+        LabelMatchers labelMatchers,
+        Configuration config
+    ) {
         var matchers = labelMatchers.matchers();
         // optimization for literal selectors that don't have label matchers
         if (matchers.isEmpty()) {
@@ -737,6 +907,9 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
                 hasNameMatcher = true;
             } else {
                 Expression field = fields.get(hasNameMatcher ? i - 1 : i); // adjust index if name matcher was seen
+                if (field.resolved() && DataType.isString(field.dataType()) == false) {
+                    field = new ToString(field.source(), field, config);
+                }
                 Expression condition = translateLabelMatcher(source, field, matcher);
                 if (condition != null) {
                     conditions.add(condition);
@@ -749,7 +922,7 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
             return null;
         }
 
-        return Predicates.combineAnd(conditions);
+        return combineAnd(conditions);
     }
 
     /**
@@ -759,7 +932,7 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
      * @param matcher the label matcher to translate
      * @return the ESQL Expression, or null if the matcher matches all or none
      */
-    private static Expression translateLabelMatcher(Source source, Expression field, LabelMatcher matcher) {
+    public static Expression translateLabelMatcher(Source source, Expression field, LabelMatcher matcher) {
         // Check for universal matchers
         if (matcher.matchesAll()) {
             return Literal.fromBoolean(source, true); // No filter needed (matches everything)
@@ -770,39 +943,67 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
             return Literal.fromBoolean(source, false);
         }
 
-        // Try to extract exact match
-        String exactMatch = AutomatonUtils.matchesExact(matcher.automaton());
-        if (exactMatch != null) {
-            return new Equals(source, field, Literal.keyword(source, exactMatch));
+        Expression condition;
+
+        if (matcher.isMultiValue()) {
+            var expressions = new ArrayList<Expression>(matcher.values().size());
+            if (matcher.matcher().isRegex()) {
+                // Each value is a regex, combine with OR
+                for (var v : matcher.values()) {
+                    expressions.add(new RLike(source, field, new RLikePattern(v)));
+                }
+                condition = Predicates.combineOr(expressions);
+            } else {
+                // Each value is a plain literal, match exact with the IN clause
+                for (var v : matcher.values()) {
+                    expressions.add(Literal.keyword(source, v));
+                }
+                condition = new In(source, field, expressions);
+            }
+            if (matcher.isNegation()) {
+                condition = new Not(source, condition);
+            }
+        } else {
+            // Single value exact match
+            var m = AutomatonUtils.matchesExact(matcher.automaton());
+            if (m != null) {
+                condition = new Equals(source, field, Literal.keyword(source, m));
+            } else {
+                // Try to extract disjoint patterns (handles mixed prefix/suffix/exact)
+                var fragments = AutomatonUtils.extractFragments(matcher.getFirstValue());
+                if (fragments != null && fragments.isEmpty() == false) {
+                    condition = translateDisjointPatterns(source, field, fragments);
+                } else {
+                    // Fallback to RLIKE with the full automaton pattern
+                    // Note: We need to ensure the pattern is properly anchored for PromQL semantics
+                    condition = new RLike(source, field, new RLikePattern(matcher.getFirstValue()));
+                }
+                if (matcher.isNegation()) {
+                    condition = new Not(source, condition);
+                }
+            }
         }
 
-        Expression condition;
-        // Try to extract disjoint patterns (handles mixed prefix/suffix/exact)
-        List<AutomatonUtils.PatternFragment> fragments = AutomatonUtils.extractFragments(matcher.value());
-        if (fragments != null && fragments.isEmpty() == false) {
-            condition = translateDisjointPatterns(source, field, fragments);
-        } else {
-            // Fallback to RLIKE with the full automaton pattern
-            // Note: We need to ensure the pattern is properly anchored for PromQL semantics
-            condition = new RLike(source, field, new RLikePattern(matcher.toString()));
-        }
-        if (matcher.isNegation()) {
-            condition = new Not(source, condition);
+        // PromQL spec: absent labels are treated as having value "". If the matcher's automaton
+        // accepts the empty string (e.g. {label=""} or {label!="foo"}), series where the label
+        // field is NULL (absent) must also match.
+        if (matcher.matchesEmpty()) {
+            condition = Predicates.combineOr(List.of(new IsNull(source, field), condition));
         }
         return condition;
     }
 
     /**
      * Translates disjoint pattern fragments into optimized ESQL expressions.
-     *
-     * Homogeneous patterns (all same type):
-     * - All EXACT → field IN ("a", "b", "c")
-     * - All PREFIX → field STARTS_WITH "p1" OR field STARTS_WITH "p2" ...
-     * - All SUFFIX → field ENDS_WITH "s1" OR field ENDS_WITH "s2" ...
-     *
+     * <p>
+     * Homogeneous patterns (all the same type):
+     * - All EXACT -> field IN ("a", "b", "c")
+     * - All PREFIX -> field STARTS_WITH "p1" OR field STARTS_WITH "p2" ...
+     * - All SUFFIX -> field ENDS_WITH "s1" OR field ENDS_WITH "s2" ...
+     * <p>
      * Heterogeneous patterns:
-     * - Mixed → (field == "exact") OR (field STARTS_WITH "prefix") OR (field ENDS_WITH "suffix") OR (field RLIKE "regex")
-     *
+     * - Mixed -> (field == "exact") OR (field STARTS_WITH "prefix") OR (field ENDS_WITH "suffix") OR (field RLIKE "regex")
+     * <p>
      * Fragments are sorted by type for optimal query execution order:
      * 1. EXACT (most selective, can use IN clause)
      * 2. PREFIX (index-friendly)
@@ -854,7 +1055,6 @@ public final class TranslatePromqlToEsqlPlan extends OptimizerRules.Parameterize
      */
     private static Expression translatePatternFragment(Source source, Expression field, AutomatonUtils.PatternFragment fragment) {
         Literal value = Literal.keyword(source, fragment.value());
-
         return switch (fragment.type()) {
             case EXACT -> new Equals(source, field, value);
             case PREFIX -> new StartsWith(source, field, value);
